--- a/Login.css
+++ b/Login.css
@@ -31,12 +31,13 @@ nav{
     color: red;
     background-color: red;
 }
-.login{
+
+form{
     margin-top: 10%;
     margin-bottom: 10%;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
- border: 1px solid black;
-
+    background-color: lightgoldenrodyellow;
+    padding: 30px;
 }
