--- a/customstyle.css
+++ b/customstyle.css
@@ -14,6 +14,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     padding: 0 4px 0 50px;
+    margin: auto  ;
 }
 
 
@@ -24,4 +25,27 @@ body {
 
 .imgxt {
     text-align: center;
+}
+
+#movierow {
+
+    width: 70%;
+    margin-left: 30px;
+}
+
+#snackrow {
+    margin-top: 30px;
+    width: 70%;
+    margin-left: 30px;
+}
+
+#hobbyrow {
+    margin-top: 30px;
+    width: 70%;
+    margin-left: 30px;
+}
+
+
+label {
+    color: #f5ffb1;
 }
