--- a/contact.css
+++ b/contact.css
@@ -35,5 +35,10 @@ textarea{
     background-color: #e2e2e2;
 }
 
+.container-icon{
+    width: 30%;
+    display:flex;
+    flex-direction: column;
+}
 
 
