--- a/main.css
+++ b/main.css
@@ -1,3 +1,19 @@
+body{
+    background-color: white;
+    font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+
 .navbar-toggler{
     border:none;
+}
+
+nav{
+    margin-bottom: 3vmax;
+}
+
+#carousel{
+    margin-top: -3vmax;
 }
