changed width and height carousel, changes styling custom page...

--- a/customstyle.css
+++ b/customstyle.css
@@ -1,9 +1,11 @@
 
-
+#step1box{
+    background-color: #c1d1e8;
+}
 
 .step {
-    text-align: center;
-    background-color: grey;
+    text-align: left;
+padding-right: 2vmax;
 }
 
 #lootlist .row {
