--- a/register.css
+++ b/register.css
@@ -1,11 +1,11 @@
 h1{
 
     text-align: center;
-   margin-top: 20%;
+   padding-top: 2%;
 }
 
 form{
-    margin-top: 10%;
+    margin-top: 3%;
     margin-bottom: 10%;
     margin-left: auto;
     margin-right: auto;
