--- a/customstyle.css
+++ b/customstyle.css
@@ -21,9 +21,27 @@ padding-right: 2vmax;
     padding: 10px;
 }
 
-.imgxt {
+
+.hover01 {
     text-align: center;
+    overflow: hidden;
+
 }
+.hover01 label {
+    color: #000919
+}
+
+.hover01 figure img {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+}
+.hover01 figure:hover img {
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3);
+}
+
 
 #movierow {
 
@@ -43,7 +61,18 @@ padding-right: 2vmax;
     margin-left: 30px;
 }
 
+.carousel-inner img {
+    margin: auto;
+}
 
+.carousel {
+    background-color: #c1d1e8;
+}
+
+#carouselExampleControls {
+    margin: auto;
+}
 label {
     color: #f5ffb1;
 }
+
