register-login background Test

--- a/register.css
+++ b/register.css
@@ -1,7 +1,9 @@
 h1{
-    color: white;
+    color: black;
     text-align: center;
-   padding-top: 2%;
+   margin-top: 10%;
+   margin-top: 10%;
+    padding-bottom: 15%;
 }
 
 form{
