--- a/customstyle.css
+++ b/customstyle.css
@@ -1,11 +1,27 @@
 
-#step1box{
+.step1box{
     background-color: #c1d1e8;
 }
+
+
 
 .step {
     text-align: left;
 padding-right: 2vmax;
+}
+
+.steptitle {
+    padding-top: 30px;
+    margin-top: 50px;
+}
+
+.stepcount {
+    color: #b69c7c;
+}
+
+.stepdirection {
+    color: #fff5c3;
+    margin-bottom: 50px;
 }
 
 #lootlist .row {
@@ -28,7 +44,7 @@ padding-right: 2vmax;
 
 }
 .hover01 label {
-    color: #000919
+    color: #fff5c3
 }
 
 .hover01 figure img {
@@ -80,7 +96,5 @@ body{
 
     background-image: url("lb3.jpg");
     background-size: 30%;
-
-
-
 }
+
