--- a/contact.css
+++ b/contact.css
@@ -1,4 +1,7 @@
-
+body{
+    max-width: 100vw;
+    max-height:100vh;
+}
 .form{
 
     position: relative;
@@ -57,7 +60,7 @@ textarea{
 }
 
 
-#social{
+.social{
     margin-bottom: 2vmax;
     margin-left: 2vmax;
 }
