--- a/Login.css
+++ b/Login.css
@@ -1,19 +1,21 @@
 
-
 form{
     margin-top: 5%;
     margin-bottom: 10%;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-    background-color: lightgoldenrodyellow;
+    background-color: #2b2121;
     padding: 30px;
     text-align: center;
+    border: 1px solid black;
 }
 
 body{
-  background-image: url("lb2.jpg");
-    background-size: 30%;
+  background-image: url("img/b7.jpg");
+    background-size: 200px;
+    
+    
 
 
 }
