--- a/css/Login.css
+++ b/css/Login.css
@@ -4,16 +4,28 @@ form{
     margin-bottom: 10%;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
-    background-color: #2b2121;
+    width: 30%;
+    background-color:rgb(43, 33, 33);opacity:0.8;
     padding: 30px;
     text-align: center;
-    border: 1px solid black;
+    border: 5px solid #fff9e7;
+    
+    
 }
 
 body{
-  background-image: url("../img/background.jpg");
-    background-size: 30%;
+  background-image: url("../img/bg-1.jpg");
+    background-size: 40%;
+    background-position: center bottom;
+
+}
+
+#signn{
+ 
+  margin-top: -40%;
+  
+  {
+  
 
 
 }
