--- a/css/register.css
+++ b/css/register.css
@@ -1,5 +1,5 @@
 h1{
-    color: black;
+    color: white;
     text-align: center;
    margin-top: 10%;
    margin-top: 10%;
@@ -12,15 +12,17 @@ form{
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-    background-color: lightgoldenrodyellow;
+    background-color:rgb(43, 33, 33);opacity:0.8;
     padding: 30px;
+    color:white;
+    border: 5px solid #fff9e7;
 
 }
 body{
 
-    background-image: url("../img/background.jpg");
-    background-size: 30%;
-
+    background-image: url("../img/bg-1.jpg");
+    background-size: 45%;
+    background-position: center ;
 
 
 }
