--- a/css/Login.css
+++ b/css/Login.css
@@ -14,8 +14,8 @@ form{
 }
 
 body{
-  background-image: url("../img/bg-1.jpg");
-    background-size: 40%;
+  background-image: url("../img/bg1-white.jpg");
+    background-size: 60%;
     background-position: center bottom;
 
 }
