--- a/css/register.css
+++ b/css/register.css
@@ -19,8 +19,8 @@ form{
 }
 body{
 
-    background-image: url("../img/bg-1.jpg");
-    background-size: 45%;
+    background-image: url("../img/bg1-white.jpg");
+    background-size: 30%;
     background-position: center ;
 
 
