--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
 
 
 }
+
 #information{
 
     color: seashell;
@@ -29,7 +30,14 @@
 
 }
 
+.imagepar{
 
+    width:40%;
+
+margin-left: 30%;
+    margin-top: 50px;
+
+}
 .rounded-circle{
 
 
@@ -78,10 +86,11 @@ h1{
 
 .luckyboxtitle{
     padding-top: 5vmax;
+
+
 }
 
 .card{
-
 
     border-style: none;
 }
