--- a/css/customstyle.css
+++ b/css/customstyle.css
@@ -6,18 +6,14 @@ body{
 
 }
 
-.bigcontain {
+.bgcontainer {
     background-color: #3a3030;
     opacity: 0.95;
+    width: 100%;
 }
 
-.step1box{
-    background-color: #3a3030;
-    opacity: 0.95;
 
-}
-
-.step1box p , h2{
+.step1box p , h2 {
    color: whitesmoke;
     font-weight: bold;
 }
@@ -65,7 +61,7 @@ color: whitesmoke;
     display: flex;
     flex-wrap: wrap;
     padding: 0 4px 0 50px;
-    margin: auto  ;
+    margin: auto;
 }
 
 
@@ -122,16 +118,11 @@ color: whitesmoke;
 #carouselExampleControls {
     margin: auto;
 }
-label {
-
-}
-
-
-#carouselExampleControls .carousel-inner{
-    border: 5px solid black;
-}
 
 .submitbutton {
     text-align: center;
 }
 
+.carouselInfo{
+    color: ghostwhite;
+}
