--- a/css/contact.css
+++ b/css/contact.css
@@ -1,11 +1,14 @@
-
+body{
+    color: ghostwhite;
+}
  input{
     width:100%;
     border: none;
-    color: gray;
+    color: #222222;
     padding-top: 20px;
     border-bottom: #0c5460 1px solid;
     margin-bottom: 20px;
+     border-radius: 3px;
 }
 
 
@@ -20,7 +23,8 @@ textarea{
 
 .img-fluid{
     border: none;
-    width: 10%;
+    width: 20%;
+    background-color: none;
 }
 
 .map{
@@ -33,8 +37,9 @@ textarea{
 }
 
 body{
-    background-image: url("../img/background.jpg");
-    background-repeat: no-repeat;
+    background-image: url("../img/bg-1.jpg");
+    background-size: 40%;
+    background-position: center bottom;
 }
 .row{
 
@@ -43,7 +48,8 @@ body{
 }
 
 .part1, .part2{
-    background-color: white;
+    background-color: #3a3030;
+    opacity: 0.95;
     padding: 5vw 5vw 0 5vw;
 
 }
