--- a/css/main.css
+++ b/css/main.css
@@ -44,11 +44,6 @@ font-weight: bolder;
     color: #740716;
 }
 
-p{
-    padding-top: 2vmax;
-    padding-bottom: 2vmax;
-}
-
 .italicfont{
     font-style: italic;
 }
@@ -56,5 +51,11 @@ p{
 .title{
     font-weight: bolder;
     font-size: xx-large;
+}
+
+footer{
+    background-color: #222222;
+    color: ghostwhite;
+
 }
 
