--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 
 }
 .parallax {
-  background: url("../img/background.jpg");
+  background: url("../img/IMG_0122.gif");
     background-size: 50%;
     background-attachment: fixed;
     height:400px;
